fix pressure gauge overflow by resizing rings

--- a/src/App.css
+++ b/src/App.css
@@ -342,8 +342,8 @@
 }
 
 .gauge-ring {
-  width: 72px;
-  height: 72px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -352,8 +352,8 @@
 }
 
 .gauge-inner {
-  width: 54px;
-  height: 54px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   background: #0f0c29;
   display: flex;
@@ -362,7 +362,7 @@
 }
 
 .gauge-value {
-  font-size: 1.05rem;
+  font-size: 0.95rem;
   font-weight: 700;
   color: #fff;
   line-height: 1;
